stylesheet.css
@viewport {
    width: device-width;
    zoom: 1.0;
}

div {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

#banner {
    width:100%;
    position:fixed;
    top:20px;
    background-color:DarkOrange;
    position:absolute;
    left:0px;

    /*border-style: solid;
    border-color: black;
    border-width: 1px;*/
}

h1 {
    margin-left: 10%;
    margin-top: 25px;
    color: white;
    font-family: helvetica;
    font-size: 40px;
    margin-bottom: 40px;
    text-decoration: none;
}

#nav-fg {
    background-color:white;
    border-style:solid;
    border-color:white;
    border-width:4px;
    color:DarkOrange;
    width: calc((100% / 3) - 2%);
    height:48px;
    margin:1%;
    float:left;
    text-align: center;
    cursor: default;
    line-height:44px;
}

#nav-bg {
    background-color:DarkOrange;
    border-style:solid;
    border-color:white;
    border-width:4px;
    color:white;
    width: calc((100% / 3) - 2%);
    height:48px;
    margin:1%;
    float:left;
    text-align: center;
    transition: background-color .5s;
    line-height:44px;
}

#nav-bg:hover {
    background-color:#FFB700;
}

#nav-text {
    font-family: helvetica;
    font-size: calc(18px + (.8vw));
    text-align: center;
    font-weight: bold;
}

#navbar {
    position:absolute;
    left:8%;
    right:8%;
    bottom:-30px;
    max-width:550px;
}

#content {
    position: relative;
    width: auto;
    padding: 10px;
    margin-top: 30px;
    margin-left: 10%;
    margin-right:10%;
    font-family:helvetica;
    font-size: 14pt;
}

